# realflare

./: .gitignore  404.html  CHANGELOG.md  README.md  changelog.md  index.html  mkdocs.yaml  mkdocs.yml  package-lock.json  package.json  pyproject.toml  render.bat  setup.bat  sitemap.xml  tsconfig.json
assets/javascripts/: custom.js
assets/stylesheets/: custom.css  custom.css.map  home.css  home.css.map
benchmark/: benchmark.py  report_template.md
benchmark/nikon_ai_50_135mm/: project.animation.json  project.json  report_v0.1.0.md  report_v0.3.1.md  report_v0.4.2.md  report_v0.4.3.md  report_v0.4.4.md  report_v0.5.0.md
benchmark/projects/: benchmark_v0.0.1.json
docs/: installation.md
docs/guides/: creating-a-flare.md  creating-a-lens-model.md  creating-a-prescription.md
docs/knowledge/: coding.md  optics.md  rendering.md
docs/overrides/: home.html  main.html
docs/overrides/assets/javascripts/: custom.js
docs/overrides/assets/stylesheets/: custom.css.map
docs/overrides/partials/: header.html
docs/reference/: command_line.md  flare.md  prescription.md  presets.md  render.md
docs_src/: custom.scss  custom.ts  home.scss
flare/: __init__.py  __main__.py  update.py
flare/api/: data.py  engine.py  glass.py  path.py
flare/api/tasks/: aperture.py  compositing.py  diagram.py  ghost.py  opencl.py  rasterizing.py  raytracing.py  starburst.py
flare/api/tasks/cl/: aperture.cl  diagram.cl  rasterizing.cl  raytracing.cl  test.cl
flare/cli/: app.py
flare/gui/: app.py  flareeditor.py  lensmodeleditor.py  logger.py  presetbrowser.py  rendereditor.py  settings.py  viewer.py
flare/plugins/: nuke.py
flare/resources/model/Kodak/: 100mm.json
flare/resources/model/Nikon/: af_s_28_70mm.json
flare/resources/model/Tronnier/: color-heliar.json
flare/resources/model/Zeiss/: zeiss-mp-65-t1-3.json  zeiss-mp-70-t1-3.json
flare/resources/preset/flare/: nikon.json
flare/resources/preset/ghost/: round.json
flare/resources/preset/quality/: low.json
flare/resources/preset/starburst/: star.json
flare/utils/: ciexyz.py  color.py  frft.py  processing.py  timing.py
guides/creating-a-flare/: index.html
guides/creating-a-prescription/: index.html
installation/: index.html
knowledge/coding/: index.html
knowledge/optics/: index.html
knowledge/rendering/: index.html
nuke/: Realflare.lnk  menu.py  realflare.gizmo  realflare_setup.py  realflare_utils.py
overrides/: home.html  main.html
overrides/assets/javascripts/: custom.js  custom.js.map
overrides/assets/stylesheets/: custom.css  custom.css.map  home.css  home.css.map
overrides/partials/: header.html
realflare/: __init__.py  __main__.py  sentry.py  storage.py  update.py
realflare/api/: data.py  engine.py  glass.py  lens.py  path.py
realflare/api/tasks/: aperture.py  compositing.py  diagram.py  diffraction.py  ghost.py  opencl.py  preprocessing.py  rasterizing.py  raytracing.py  starburst.py
realflare/cli/: app.py
realflare/gui/: app.py  flareeditor.py  lensmodeleditor.py  logger.py  parameters.py  presetbrowser.py  rendereditor.py  sentry.py  settings.py  viewer.py
realflare/utils/: frft.py  ocio.py  processing.py  settings.py  storage.py  timing.py
reference/command_line/: index.html
reference/flare/: index.html
reference/prescription/: index.html
reference/presets/: index.html
reference/render/: index.html
scripts/: render.bat  setup.bat
search/: search_index.json
tests/: animation.json  cli.py  glass.py  lens.py  sampling.py  test.py  test_cli.py  test_engine.py
tests_gui/: flareeditor.py  lensmodeleditor.py  logger.py  parameters.py  presetbrowser.py  rendereditor.py  settings.py  update.py  updater.py  viewer.py
(+14 files in other folders)
