[project]
name = "realflare"
description = "Physically-Based Lens Flare Tool"
authors = [
    {name = "Beat Reichenbach", email = "info@artofbeat.com"}
]
dynamic = ["version"]
dependencies = [
    "qt-extensions @ https://github.com/beatreichenbach/qt-extensions/archive/refs/heads/main.zip",
    "PySide2",
    "PyYAML",
    "numpy",
    "opencv-python",
    "pyopencl",
    "opencolorio",
    "sentry-sdk",
    "python-slugify[unidecode]"
]
requires-python = ">=3.10"
license = {text = "MIT"}
readme = "README.md"
classifiers = [
"Development Status :: 2 - Pre-Alpha",
"Programming Language :: Python :: 3.10"
]

[project.optional-dependencies]
dev = [
    "mkdocs-material",
    "python-semantic-release"
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["realflare*"]

[tool.setuptools.package-data]
realflare = ["**/*.cl", "**/*.png", "**/*.json", "**/*.yml"]

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "DEBUG"

[tool.semantic_release]
version_variable = "realflare/__init__.py:__version__"
branch = "main"
build_command = "python -m build --sdist --wheel"
upload_to_pypi = false
upload_to_repository = false
