[project]
name = "realflare"
description = "Physically-Based Lens Flare Tool"
version = "0.4.0"
authors = [
    {name = "Beat Reichenbach"}
]
dependencies = [
    "qt-extensions @ https://github.com/beatreichenbach/qt-extensions/archive/refs/heads/main.zip",
    "PySide2",
    "PyYAML",
    "numpy",
    "opencv-python",
    "pyopencl",
    "opencolorio",
    "sentry-sdk",
    "python-slugify[unidecode]"
]
requires-python = ">=3.10"
license = {text = "MIT"}
readme = "README.md"

[project.optional-dependencies]
dev = [
    "mkdocs-material",
    "python-semantic-release",
    "py-markdown-table"
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["realflare*"]

[tool.setuptools.package-data]
realflare = ["**/*.cl", "**/*.png", "**/*.json", "**/*.yml"]

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "DEBUG"

[tool.semantic_release]
version_variable = "realflare/__init__.py:__version__"
branch = "main"
upload_to_pypi = false
upload_to_repository = false
upload_to_release = false
version_toml = "pyproject.toml:project.version"
#build_command = "python -m build --sdist --wheel"
