[project]
name = "realflare"
description = "Physically-Based Lens Flare Tool"
version = "0.6.4"
authors = [
    {name = "Beat Reichenbach"}
]
dependencies = [
    "qt-extensions",
    "PySide2",
    "PyYAML",
    "numpy<2",
    "opencv-python-headless",
    "pyopencl",
    "opencolorio",
    "sentry-sdk",
    "python-slugify[unidecode]"
]
requires-python = ">=3.9,<3.11"
license = {text = "MIT"}
readme = "README.md"

[project.optional-dependencies]
dev = [
    "black",
    "mkdocs-material",
    "python-semantic-release",
    "py-markdown-table"
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["realflare*"]

[tool.setuptools.package-data]
realflare = ["**/*.cl", "**/*.ico", "**/*.png", "**/*.json", "**/*.yml"]

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "DEBUG"

[tool.semantic_release]
version_toml = [
    "pyproject.toml:project.version"
]
version_variables = [
    "realflare/__init__.py:__version__"
]
#build_command = "python -m build --sdist --wheel"

[tool.semantic_release.remote]
ignore_token_for_push = true

[tool.black]
skip-string-normalization = true
